--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  launcher_assist: ^1.1.3
+  path_provider: ^0.5.0+1
+  url_launcher: ^5.0.2
+  android_intent: ^0.3.0+2
+  package_info: ^0.4.0+3
+  device_apps: ^1.0.7
 
 dev_dependencies:
   flutter_test:
