--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   package_info: ^0.4.0+3
   device_apps: ^1.0.7
   shared_preferences: ^0.5.2
+  file_cache: ^0.1.2
+  flutter_cache_manager: ^0.3.2
 
 
 dev_dependencies:
